[gd_scene load_steps=2 format=3 uid="uid://c8h7v2m4n3p9q"]

[ext_resource type="Script" path="res://client/ui/world_map.gd" id="1"]

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="TopBar" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="Panel/TopBar"]
layout_mode = 2
text = "World Map (M to close)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ZoomLabel" type="Label" parent="Panel/TopBar"]
layout_mode = 2
text = "Zoom: 1000m"
vertical_alignment = 1

[node name="PositionLabel" type="Label" parent="Panel/TopBar"]
layout_mode = 2
text = "Center: 0, 0"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/TopBar"]
layout_mode = 2
text = "Close (M)"

[node name="MapContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MapTextureRect" type="TextureRect" parent="Panel/MapContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
expand_mode = 1
stretch_mode = 5

[node name="HelpLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Mouse Wheel: Zoom | Left Click + Drag: Pan | Right Click: Place Pin | Middle Click: Send Ping"
horizontal_alignment = 1
vertical_alignment = 1
